# investor

./: .gitignore  CONTRIBUTING.md  GITHUB_SETUP.md  InvestorSearchTool.py  README.md  STREAMLIT_CLOUD.md  database.py  main.py  pyproject.toml  requirements-streamlit.txt  requirements.txt  scraping_config.py  streamlit_app.py
.streamlit/: config.toml
assets/: styles.css
attached_assets/: Pasted-import-streamlit-as-st-import-requests-from-bs4-import-BeautifulSoup-import-pandas-as-pd-from-seleni-1740515752138.txt
components/: comparison.py  dashboard.py  email_alerts.py  matching_algorithm.py  pitch_deck.py  search.py  sentiment.py  translator.py  visualizations.py  web_scraper.py
utils/: styling.py
