[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "fake-useragent>=2.0.3",
    "openai>=1.64.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.38",
    "streamlit>=1.42.2",
    "trafilatura>=2.0.0",
    "xlsxwriter>=3.2.2",
]
